# yandasoft

./: .gitignore  .gitlab-ci.cmake.in  CMakeLists.txt  build_status  dependencies.cmake
apps/: CMakeLists.txt  arrindexspeed.cc  bpdelaytool.cc  cadvise.cc  cbpcalibrator.cc  ccalapply.cc  ccalibrator.cc  ccontsubtract.cc  cddcalibrator.cc  cdeconvolver-mpi.cc  cdeconvolver.cc  cflagger.cc  cimager.cc  correctdelay.cc  csimulator.cc  delaysolver.cc  extractdata.cc  fftw-generate-wisdom.cc  imager.cc  imcontsub.cc  imgstat.cc  linmos-mpi.cc  linmos.cc  maskBadChannels.cc  msmerge.cc  opcal.cc  statsAndMaskChanApp.cc  tClearMSCache.cc  tCompareMSData.cc  tDeconvolveTimerUtils.cc  tLinmos.py  tMajorCycleComms.cc  tMultiScaleBasisFunction.cc  tParallelIterator.cc  tWeightsLogGather.cc  tmerge.cc
askap/: askap_synthesis.h
askap/deconvolution/: DeconvolverBase.h  DeconvolverBase.tcc  DeconvolverBasisFunction.tcc  DeconvolverControl.h  DeconvolverControl.tcc  DeconvolverFista.tcc  DeconvolverMultiTermBasisFunction.h  DeconvolverMultiTermBasisFunction.tcc  DeconvolverState.h
askap/distributedimager/: AdviseDI.cc  AdviseDI.h  CMakeLists.txt  CalcCore.cc  CalcCore.h  ContinuumImager.cc  ContinuumMaster.cc  ContinuumMaster.h  ContinuumWorker.cc  ContinuumWorker.h  CubeBuilder.h  CubeBuilder.tcc  CubeComms.cc  CubeComms.h  DataSourceManager.cc  DataSourceManager.h  MSSplitter.cc  MSSplitter.h  WorkUnitCache.cc  WorkUnitCache.h  WorkUnitContainer.cc  WorkUnitContainer.h
askap/flagging/: AmplitudeFlagger.cc  AmplitudeFlagger.h  CMakeLists.txt  ElevationFlagger.cc  ElevationFlagger.h  FlaggerFactory.cc  FlaggerFactory.h  FlaggingStats.h  IFlagger.cc  IFlagger.h  MSFlaggingSummary.cc  MSFlaggingSummary.h  SelectionFlagger.cc  SelectionFlagger.h  StokesVFlagger.cc  StokesVFlagger.h
askap/gridding/: AProjectWStackVisGridder.cc  AProjectWStackVisGridder.h  ASKAPIllumination.cc  AWProjectVisGridder.cc  AWProjectVisGridder.h  AltWProjectVisGridder.h  BasicCompositeIllumination.h  CMakeLists.txt  CompositeUVWeightCalculator.cc  CompositeUVWeightCalculator.h  ConjugatesAdderFFT.cc  ConjugatesAdderFFT.h  GenericUVWeightAccessor.cc  GenericUVWeightAccessor.h  GenericUVWeightBuilder.cc  GenericUVWeightBuilder.h  GenericUVWeightIndexTranslator.cc  GenericUVWeightIndexTranslator.h  IUVWeightAccessor.cc  IUVWeightAccessor.h  IUVWeightBuilder.h  IUVWeightCalculator.cc  IUVWeightCalculator.h  IUVWeightIndexTranslator.cc  IUVWeightIndexTranslator.h  MPIWProjectVisGridder.cc  MPIWProjectVisGridder.h  ReciprocalUVWeightCalculator.cc  ReciprocalUVWeightCalculator.h  RobustUVWeightCalculator.cc  RobustUVWeightCalculator.h  SKA_LOWIllumination.cc  SKA_LOWIllumination.h  UVWeight.h  (+17 more)
askap/utils/: BandpassDelayHelper.cc  BandpassDelayHelper.h  CMakeLists.txt  CleanUtils.cc  CleanUtils.h  DeconvolveTimerUtils.cc  DeconvolveTimerUtils.h  DelaySolverImpl.cc  LinmosUtils.cc  StatsAndMask.cc  StatsAndMask.h  TilingUtils.cc  TilingUtils.h
(+110 files in other folders)
